implementation_level/k8s/tea-store/webUI/webUI.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
spec:
  selector:
    matchLabels:
      type: webui-type
  template:
    metadata:
      labels:
        type: webui-type
    spec:
      containers:
      - name: webui
        image: giovaz94/tea-store-general
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: webui-service
  labels:
    type: webui-service-type
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/metrics"
spec:
  selector:
    type: webui-type
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: webui-service
spec:
spec:
  host: webui-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webui-service
spec:
  hosts:
    - webui-service
  http:
    - route:
        - destination:
            host: webui-service
